--- a/html/index.html
+++ b/html/index.html
@@ -8,11 +8,16 @@
     <title>APIs - XRP Ledger Foundation</title>
   </head>
   <body>
-    <h3>XRP Ledger Foundation</h3>
-    <h1>API Endpoints</h1>
+    <div class="container">
+      <img src="/logo.png" width="50" class="me-4 float-left float-start" alt="XRP Ledger Foundation" />
 
-    <ul>
-      <li><code class="text-primary">UNL</code>: <a href="https://vl.xrplf.org">vl.xrplf.org  </a></li>
-    </ul>
+      <h5>XRP Ledger Foundation</h5>
+      <h1><b>API Endpoints</b></h1>
+
+      <ul>
+        <li><code class="text-primary"><b>UNL</b></code>: <a href="https://vl.xrplf.org">vl.xrplf.org</a></li>
+        <li><code class="text-primary"><b>XRP supply</b></code>: <a href="https://supply.api.xrplf.org">supply.api.xrplf.org</a></li>
+      </ul>
+    </div>
   </body>
 </html>
