--- a/html/index.html
+++ b/html/index.html
@@ -8,13 +8,13 @@
     <title>APIs - XRP Ledger Foundation</title>
   </head>
   <body>
-    <div class="container">
-      <img src="/logo.png" width="50" class="me-4 float-left float-start" alt="XRP Ledger Foundation" />
+    <div class="container pt-3">
+      <img src="/logo.png" width="75" class="me-3 float-left float-start" alt="XRP Ledger Foundation" />
 
       <h5>XRP Ledger Foundation</h5>
       <h1><b>API Endpoints</b></h1>
 
-      <ul>
+      <ul class="mt-2">
         <li><code class="text-primary"><b>UNL</b></code>: <a href="https://vl.xrplf.org">vl.xrplf.org</a></li>
         <li><code class="text-primary"><b>XRP supply</b></code>: <a href="https://supply.api.xrplf.org">supply.api.xrplf.org</a></li>
       </ul>
