--- a/html/index.html
+++ b/html/index.html
@@ -16,6 +16,7 @@
 
       <ul class="mt-2">
         <li><code class="text-primary"><b>UNL</b></code>: <a href="https://vl.xrplf.org">vl.xrplf.org</a></li>
+        <li><code class="text-primary"><b>Public (full history) node stats (xrplcluster.com)</b></code>: <a href="https://xrpl.ws-stats.com/json">xrpl.ws-stats.com</a></li>
         <li><code class="text-primary"><b>XRP supply</b></code>: <a href="https://supply.api.xrplf.org">supply.api.xrplf.org</a></li>
       </ul>
     </div>
